# CSStruct

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: csstruct.h  data.h
src/csstruct/: property.h  reader.h
test/: reader_tests.h  test_structs.h  test_util.h  tests.cpp
test/test_data/: float_struct.csv  int_struct.csv
